# DMolybTarget

./: .gitignore  CMakeLists.txt  DMolybTarget.cxx  README.md
analysis/: neutrons_birth_spectrum.ipynb
analysis/.ipynb_checkpoints/: neutrons_birth_spectrum-checkpoint.ipynb
auxilary_files/: neutrons_output.txt
include/: AuxilaryUtilities.hh  MolybdenumActionInitialization.hh  MolybdenumDetectorConstruction.hh  MolybdenumEvent.hh  MolybdenumEventAction.hh  MolybdenumGhostSensitiveDetector.hh  MolybdenumParallelWorld.hh  MolybdenumPhysicsList.hh  MolybdenumPhysicsListGeneral.hh  MolybdenumPrimaryGeneratorAction.hh  MolybdenumRun.hh  MolybdenumRunAction.hh  MolybdenumStackingAction.hh  MolybdenumSteppingAction.hh
macros/: run.mac  vis.mac
root_files/: MolybdenumProtonBombardmentRun0_t2.root  MolybdenumProtonBombardmentRun1_t0.root
src/: AuxilaryUtilities.cc  MolybdenumActionInitialization.cc  MolybdenumDetectorConstruction.cc  MolybdenumEventAction.cc  MolybdenumGhostSensitiveDetector.cc  MolybdenumParallelWorld.cc  MolybdenumPhysicsList.cc  MolybdenumPhysicsListGeneral.cc  MolybdenumPrimaryGeneratorAction.cc  MolybdenumRunAction.cc  MolybdenumStackingAction.cc  MolybdenumSteppingAction.cc
